@@ -149,9 +149,10 @@ $sys_require_unique_email=0;
 // Themeing related vars... Some of this needs to change in the session stuff
 // The theme base directory, everything else is handled by theme_sysinit()
 $sys_themeroot=$sys_urlroot."themes/";
-// If you want an other default theme
+// If you want an other default theme or language
 $sys_theme='debian';
 //$sys_theme='savannah';
+//$sys_lang='French';
 
 // Akamization of images
 $sys_images_url="//{domain_name}/";
